# sysalert

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yml  publish.yml
src/: main.rs
