[package]
name = "sysalert"
description = "System monitoring alerts"
version = "0.2.11"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
repository = "https://github.com/daniellockyer/sysalert"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.1"
reqwest = { version = "0.11.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
self_update = { version = "0.34", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.27"
toml = "0.5"

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.release]
sign-commit = true
sign-tag = true
publish = false
pre-release-commit-message = "v{{version}}"
